[timer] feat: vibration de fin avec VibrationService réutilisable

--- a/apps/timer/android/app/src/main/AndroidManifest.xml
+++ b/apps/timer/android/app/src/main/AndroidManifest.xml
@@ -1,4 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
+    <!-- Permission requise pour la vibration -->
+    <uses-permission android:name="android.permission.VIBRATE"/>
+    
     <application
         android:label="timer"
         android:name="${applicationName}"
