[timer] feat: v0.2 notifications et alarmes (AlarmManager, notif sonore, manifest, doc)

--- a/apps/timer/pubspec.yaml
+++ b/apps/timer/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
     path: ../../packages/dotlyn_ui
   dotlyn_core:
     path: ../../packages/dotlyn_core
+  android_alarm_manager_plus: ^4.0.3
+  flutter_local_notifications: ^17.0.0
 
 dev_dependencies:
   flutter_test:
