--- a/packages/dotlyn_core/pubspec.yaml
+++ b/packages/dotlyn_core/pubspec.yaml
@@ -12,6 +12,9 @@ dependencies:
     sdk: flutter
   provider: ^6.1.2
   vibration: ^3.1.4
+  flutter_local_notifications: ^17.0.0
+  timezone: ^0.9.1
+  android_alarm_manager_plus: ^4.0.4
 
 dev_dependencies:
   test: ^1.24.0
