[refactor] move AlarmService from dotlyn_core to timer app (timer-specific code)

--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,15 @@ migrate_working_dir/
 /build/
 pubspec.lock
 
+# Generated plugin registrants
+**/linux/flutter/generated_plugin_registrant.cc
+**/linux/flutter/generated_plugin_registrant.h
+**/linux/flutter/generated_plugins.cmake
+**/windows/flutter/generated_plugin_registrant.cc
+**/windows/flutter/generated_plugin_registrant.h
+**/windows/flutter/generated_plugins.cmake
+**/macos/Flutter/GeneratedPluginRegistrant.swift
+
 # Symbolication related
 app.*.symbols
 
