--- a/apps/timer/pubspec.yaml
+++ b/apps/timer/pubspec.yaml
@@ -34,12 +34,13 @@ dependencies:
   audioplayers: ^5.2.1
   vibration: ^3.1.4
   shared_preferences: ^2.3.3
+  android_alarm_manager_plus: ^4.0.3
+  flutter_local_notifications: ^17.0.0
+  timezone: ^0.9.1
   dotlyn_ui:
     path: ../../packages/dotlyn_ui
   dotlyn_core:
     path: ../../packages/dotlyn_core
-  android_alarm_manager_plus: ^4.0.3
-  flutter_local_notifications: ^17.0.0
 
 dev_dependencies:
   flutter_test:
