--- a/apps/money_tracker/pubspec.yaml
+++ b/apps/money_tracker/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   path: ^1.8.3
   flutter_riverpod: ^2.4.0
   intl: ^0.18.0
+  url_launcher: ^6.2.0
   dotlyn_ui:
     path: ../../packages/dotlyn_ui
   dotlyn_core:
