--- a/packages/dotlyn_core/pubspec.yaml
+++ b/packages/dotlyn_core/pubspec.yaml
@@ -10,6 +10,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_riverpod: ^2.4.0
+  shared_preferences: ^2.0.0
+  intl: ^0.18.0
   provider: ^6.1.2
 
 dev_dependencies:
