--- a/apps/money_tracker/pubspec.yaml
+++ b/apps/money_tracker/pubspec.yaml
@@ -19,7 +19,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ^3.9.0
+  sdk: ">=3.0.0 <4.0.0"
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -30,18 +30,18 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
   drift: ^2.14.0
   sqlite3_flutter_libs: ^0.5.0
   path_provider: ^2.1.0
   path: ^1.8.3
   flutter_riverpod: ^2.4.0
-  intl: ^0.18.0
   url_launcher: ^6.2.0
   dotlyn_ui:
     path: ../../packages/dotlyn_ui
   dotlyn_core:
     path: ../../packages/dotlyn_core
-
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -54,7 +54,7 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
-
+  generate: true
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
