--- a/apps/sc_loop_analyzer/pubspec.yaml
+++ b/apps/sc_loop_analyzer/pubspec.yaml
@@ -8,17 +8,23 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
   sqflite_common_ffi: ^2.3.0
   path_provider: ^2.1.1
   path: ^1.8.3
-  intl: ^0.18.1
   provider: ^6.1.1
   shared_preferences: ^2.2.2
   fl_chart: ^0.65.0
   csv: ^5.1.1
+  dotlyn_ui:
+    path: ../../packages/dotlyn_ui
+  dotlyn_core:
+    path: ../../packages/dotlyn_core
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^3.0.0
 flutter:
   uses-material-design: true
+  generate: true
