[global] chore: uniformise state management, l10n imports et dépendances intl

--- a/apps/github_notes/pubspec.yaml
+++ b/apps/github_notes/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   # State management
   flutter_riverpod: ^2.4.0
   riverpod_annotation: ^2.3.0
+  intl: ^0.20.0
   
   # Database
   drift: ^2.14.0
