--- a/apps/sc_loop_analyzer/pubspec.yaml
+++ b/apps/sc_loop_analyzer/pubspec.yaml
@@ -13,7 +13,7 @@ dependencies:
   sqflite_common_ffi: ^2.3.0
   path_provider: ^2.1.1
   path: ^1.8.3
-  provider: ^6.1.1
+  flutter_riverpod: ^2.4.0
   shared_preferences: ^2.2.2
   fl_chart: ^0.65.0
   csv: ^5.1.1
