--- a/apps/design_lab/pubspec.yaml
+++ b/apps/design_lab/pubspec.yaml
@@ -14,8 +14,7 @@ dependencies:
     path: ../../packages/dotlyn_ui
   dotlyn_core:
     path: ../../packages/dotlyn_core
-  
-  provider: ^6.1.2
+  flutter_riverpod: ^2.4.0
 
 dev_dependencies:
   flutter_test:
