--- a/apps/money_tracker/pubspec.yaml
+++ b/apps/money_tracker/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   path: ^1.8.3
   flutter_riverpod: ^2.4.0
   url_launcher: ^6.2.0
+  intl: ^0.20.0
   dotlyn_ui:
     path: ../../packages/dotlyn_ui
   dotlyn_core:
