--- a/apps/github_notes/pubspec.yaml
+++ b/apps/github_notes/pubspec.yaml
@@ -43,7 +43,28 @@ dev_dependencies:
   build_runner: ^2.4.0
   drift_dev: ^2.14.0
   riverpod_generator: ^2.3.0
+  flutter_launcher_icons: ^0.13.1
+  flutter_native_splash: ^2.3.2
 
 flutter:
   uses-material-design: true
   generate: true
+  assets:
+    - assets/Dotlyn-app-icon-github_notes.svg
+    - assets/DotLyn-logo.svg
+    # - assets/icon.png  # removed, unused
+
+# Configuration for launcher icons and native splash
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/Dotlyn-app-icon-github_notes.svg"
+  adaptive_icon_background: "#FFFFFF"
+  adaptive_icon_foreground: "assets/Dotlyn-app-icon-github_notes.svg"
+
+flutter_native_splash:
+  image: "assets/DotLyn-logo.svg"
+  color: "#FFFFFF"
+  android: true
+  ios: true
+  web: true
