[docs] workflow: refonte complète documentation v2.0
- Consolidation workflow-proposals/ : 9 fichiers  3 (WORKFLOW.md, VERSIONING_CHANGELOG.md, README.md)
- Refonte copilot-instructions.md : intégration profonde workflow v2.0 (In Progress, Parking Lot, #N, SHA, CHANGELOG)
- Correction PRE_COMMIT_CHECKLIST.md : [Unreleased] sans dates
- Ajout BRANCHING.md : intégration APP.md TODO (move In Progress  Recently Done)
- Update templates/new-app/ : ajout Parking Lot section
- Archive fichiers obsolètes : workflow-proposals-v1/ + copilot-instructions-v1.md

Documentation finale : cohérente, sans redondances, source unique de vérité

--- a/_docs/templates/new-app/APP.md.template
+++ b/_docs/templates/new-app/APP.md.template
@@ -72,6 +72,14 @@ _Aucun item en cours (app en conception)._
 
 ---
 
+### 🅿️ Parking Lot (idées organiques)
+
+<!-- Idées spontanées pendant dev, à trier régulièrement (1x/semaine) -->
+
+_Vide (app en conception)._
+
+---
+
 ### ✅ Recently Done (last 15 items or 2 weeks)
 
 <!-- Format: [x] #N: Description — Done YYYY-MM-DD (commit SHA7CHAR) -->
