[monorepo] release: v2.0.0 - Workflow v2.0 + monorepo versioning
- Added: Root CHANGELOG.md with monorepo versioning (tracks workflow/docs/infrastructure)
- Updated: README.md with version 2.0.0 + link to CHANGELOG
- Updated: VERSIONING_CHANGELOG.md with scope clarification (apps vs monorepo)
- Fixed: USER-NOTES template + all apps normalized to minimal format (7 lines)
- Fixed: copilot-instructions clarified 'Format minimal et libre'

Monorepo v2.0.0 includes:
- Workflow v2.0 consolidated (WORKFLOW.md 400L + VERSIONING_CHANGELOG.md 300L)
- Templates for new apps (_docs/templates/new-app/)
- Renamed _docs/workflow-proposals/  _docs/workflow/
- Copilot instructions rewritten (725L with deep integration)
- All workflow docs corrected and consistent

--- a/_docs/templates/new-app/USER-NOTES.md.template
+++ b/_docs/templates/new-app/USER-NOTES.md.template
@@ -1,45 +1,7 @@
 # USER-NOTES.md — [APP_NAME]
 
-> **Usage** : Notes personnelles prises lors de l'utilisation de l'app  
-> **Format** : Libre, non structuré, style carnet de notes  
-> **Workflow** : Copilot lit ces notes et propose de les migrer vers APP.md TODO
+> Notes personnelles libre — Copilot LECTURE SEULE (propose migration vers APP.md TODO)
 
 ---
 
-## 🐛 Bugs Observés
-
-<!-- Date + contexte + comportement attendu vs. réel -->
-
-
-
----
-
-## 💡 Idées d'Amélioration
-
-<!-- Feature ideas + justification utilisateur -->
-
-
-
----
-
-## 📝 Observations Générales
-
-<!-- Impressions UX, comportements inattendus, feedback libre -->
-
-
-
----
-
-## ✅ Items Traités
-
-<!-- Items migrés vers APP.md TODO — garder trace temporaire puis supprimer -->
-
-
-
----
-
-**⚠️ IMPORTANT** :
-- Ce fichier est **LECTURE SEULE** pour Copilot (ne modifie pas sans validation)
-- Copilot propose actions → discussion → exécution après validation
-- Items traités supprimés UNIQUEMENT après validation utilisateur
-- Vérifier version main avant commit (sync mobile peut être plus récent)
+[Tes notes ici — format libre, pas de structure imposée]
